[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/MapBG.png" type="Texture" id=1]
[ext_resource path="res://Textures/Picnic_MAP.png" type="Texture" id=2]
[ext_resource path="res://Textures/Street_MAP.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Map.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 54.653

[sub_resource type="CircleShape2D" id=2]
radius = 54.4879

[node name="Map" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="MapBG" type="Sprite" parent="."]
position = Vector2( 294.218, 502.05 )
texture = ExtResource( 1 )

[node name="Picnic_MAP" type="Sprite" parent="."]
position = Vector2( 159.617, 415.695 )
scale = Vector2( 0.582667, 0.582667 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Picnic_MAP"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Picnic_MAP/Area2D"]
position = Vector2( -0.404968, 10.1245 )
shape = SubResource( 1 )

[node name="Street_MAP" type="Sprite" parent="."]
position = Vector2( 434.476, 578.321 )
scale = Vector2( 0.543664, 0.543664 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="Street_MAP"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Street_MAP/Area2D"]
position = Vector2( 2.73425, 17.7726 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="Picnic_MAP/Area2D" to="." method="_on_Picnic_Area_Entered"]
[connection signal="mouse_exited" from="Picnic_MAP/Area2D" to="." method="_on_Picnic_Area_Exited"]
[connection signal="mouse_entered" from="Street_MAP/Area2D" to="." method="_on_Street_Area_Entered"]
[connection signal="mouse_exited" from="Street_MAP/Area2D" to="." method="_on_Street_Area_Exited"]
